Fix Overflow issue

--- a/src/components/Home/SlideShow.module.css
+++ b/src/components/Home/SlideShow.module.css
@@ -2,6 +2,7 @@
 .slideshow {
   position: relative;
   width: 100%;
+  overflow: hidden;
 }
 
 .slideContainer {
